fix: make nav and sidemenu opaque for readability

--- a/website/css/sidebar.css
+++ b/website/css/sidebar.css
@@ -7,10 +7,10 @@
     margin-top: max(70px, 7vh); /* Changed from 60px to 5vh for responsiveness */
     transform: translateX(-100%);
     transition: transform 200ms ease-in-out;
-    /* background: linear-gradient(135deg, var(--overlay) 60%, var(--highlightMed) 80%, var(--gold)); */
     background: var(--overlay);
     z-index: 999; /* High z-index to make sure it is on top */
-    opacity: 95%;
+    opacity: 1.0;
+
 }
 .sidebarMenuInner{
     margin: 0;
@@ -30,8 +30,8 @@
 
 .sidebarMenuInner li:hover{
     color:var(--love);
-    background:var(--highlightLow);
-    opacity: 100%;
+    background:var(--highlight-low);
+    opacity: 1;
 }
 
 .sidebarMenuInner li span{
@@ -47,14 +47,18 @@
     cursor: pointer;
     text-decoration: none;
 }
+
 input[type="checkbox"]:checked ~ #sidebarMenu {
     transform: translateX(0);
 }
+
 input[type=checkbox] {
     transition: all 0.3s;
     box-sizing: border-box;
     display: none;
 }
+
+
 .sidebarIconToggle {
     transition: all 0.3s;
     box-sizing: border-box;
@@ -79,7 +83,7 @@ input[type=checkbox] {
 
 .sidebarIconToggle:hover {
 
-    background-color: var(--highlightMed);
+    background-color: var(--highlight-med);
     transition: background-color 0.3s ease, color 0.3s ease;
 }
 
